[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://5.gd" type="Script" id=2]
[ext_resource path="res://6.gd" type="Script" id=3]
[ext_resource path="res://8.gd" type="Script" id=4]
[ext_resource path="res://7.gd" type="Script" id=5]
[ext_resource path="res://4.gd" type="Script" id=6]
[ext_resource path="res://2.gd" type="Script" id=7]
[ext_resource path="res://0.gd" type="Script" id=8]
[ext_resource path="res://3.gd" type="Script" id=9]
[ext_resource path="res://1.gd" type="Script" id=10]
[ext_resource path="res://Score.gd" type="Script" id=11]
[ext_resource path="res://hand-drawing-a-game-of-tic-tac-toe-with-colored-crayons.jpg" type="Texture" id=12]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 13.0
margin_top = -2.0
margin_right = 1039.0
margin_bottom = 665.0
texture = ExtResource( 12 )

[node name="0" type="Button" parent="."]
margin_left = 287.0
margin_top = 80.0
margin_right = 432.0
margin_bottom = 198.0
text = "-"
icon_align = 1
script = ExtResource( 8 )

[node name="1" type="Button" parent="."]
margin_left = 446.0
margin_top = 80.0
margin_right = 591.0
margin_bottom = 198.0
text = "-"
icon_align = 1
script = ExtResource( 10 )

[node name="2" type="Button" parent="."]
margin_left = 603.0
margin_top = 80.0
margin_right = 748.0
margin_bottom = 198.0
text = "-"
icon_align = 1
script = ExtResource( 7 )

[node name="3" type="Button" parent="."]
margin_left = 287.0
margin_top = 208.0
margin_right = 432.0
margin_bottom = 326.0
text = "-"
icon_align = 1
script = ExtResource( 9 )

[node name="4" type="Button" parent="."]
margin_left = 446.0
margin_top = 208.0
margin_right = 591.0
margin_bottom = 326.0
text = "-"
icon_align = 1
script = ExtResource( 6 )

[node name="5" type="Button" parent="."]
margin_left = 603.0
margin_top = 208.0
margin_right = 748.0
margin_bottom = 326.0
text = "-"
icon_align = 1
script = ExtResource( 2 )

[node name="6" type="Button" parent="."]
margin_left = 289.0
margin_top = 335.0
margin_right = 434.0
margin_bottom = 453.0
text = "-"
icon_align = 1
script = ExtResource( 3 )

[node name="7" type="Button" parent="."]
margin_left = 448.0
margin_top = 335.0
margin_right = 593.0
margin_bottom = 453.0
text = "-"
icon_align = 1
script = ExtResource( 5 )

[node name="8" type="Button" parent="."]
margin_left = 605.0
margin_top = 335.0
margin_right = 750.0
margin_bottom = 453.0
text = "-"
icon_align = 1
script = ExtResource( 4 )

[node name="Score" type="Label" parent="."]
margin_left = 445.0
margin_top = 525.0
margin_right = 592.0
margin_bottom = 553.0
text = "Jugador 1:  | Jugador 2: "
script = ExtResource( 11 )

[connection signal="limpiar_casillas" from="." to="0" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="1" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="2" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="3" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="4" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="5" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="6" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="7" method="_on_Main_limpiar_casillas"]
[connection signal="limpiar_casillas" from="." to="8" method="_on_Main_limpiar_casillas"]
[connection signal="score_change" from="." to="Score" method="_on_Main_score_change"]
[connection signal="text_change_0" from="." to="0" method="_on_Main_text_change_0"]
[connection signal="text_change_1" from="." to="1" method="_on_Main_text_change_1"]
[connection signal="text_change_2" from="." to="2" method="_on_Main_text_change_2"]
[connection signal="text_change_3" from="." to="3" method="_on_Main_text_change_3"]
[connection signal="text_change_4" from="." to="4" method="_on_Main_text_change_4"]
[connection signal="text_change_5" from="." to="5" method="_on_Main_text_change_5"]
[connection signal="text_change_6" from="." to="6" method="_on_Main_text_change_6"]
[connection signal="text_change_7" from="." to="7" method="_on_Main_text_change_7"]
[connection signal="text_change_8" from="." to="8" method="_on_Main_text_change_8"]
[connection signal="button_up" from="0" to="." method="_on_0_button_up"]
[connection signal="button_up" from="1" to="." method="_on_1_button_up"]
[connection signal="button_up" from="2" to="." method="_on_2_button_up"]
[connection signal="button_up" from="3" to="." method="_on_3_button_up"]
[connection signal="button_up" from="4" to="." method="_on_4_button_up"]
[connection signal="button_up" from="5" to="." method="_on_5_button_up"]
[connection signal="button_up" from="6" to="." method="_on_6_button_up"]
[connection signal="button_up" from="7" to="." method="_on_7_button_up"]
[connection signal="button_up" from="8" to="." method="_on_8_button_up"]
